[package]
name = "sozu-e2e"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "^0.3.24"
futures-lite = "^1.12.0"
hyper = { version = "^0.14.23", features = ["client", "http1"] }
hyper-tls = "0.5.0"
tokio = { version = "1.24.1", features = ["net", "rt", "rt-multi-thread"] }
libc = "^0.2.138"
mio = "^0.8.4"
serial_test = "^0.10.0"
slab = "^0.4.7"
sozu-command-lib = { path = "../command" }
sozu-lib = { path = "../lib" }
time = "^0.3.14"
